--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 </div>
                 <!-- Bài 3 -->
                 <div class="tab-pane fade" id="bai3" role="tabpanel" aria-labelledby="profile-tab">
-                    <h1 class="tab-title">📚 Tính giá trị trung bình</h1>
+                    <h1 class="tab-title">💱 Quy đổi tiền</h1>
                     <div class="debai">
                         <p>💡<b>Đề bài:</b>
                             <br>
@@ -180,7 +180,7 @@
                 </div>
                 <!-- Bài 4 -->
                 <div class="tab-pane fade" id="bai4" role="tabpanel" aria-labelledby="profile-tab">
-                    <h1 class="tab-title">📚 Tính giá trị trung bình</h1>
+                    <h1 class="tab-title">📏 Tính diện tích, chu vi hình chữ nhật</h1>
                     <div class="debai">
                         <p>💡<b>Đề bài:</b>
                             <br>
@@ -223,7 +223,7 @@
                 </div>
                 <!-- Bài 5 -->
                 <div class="tab-pane fade" id="bai5" role="tabpanel" aria-labelledby="profile-tab">
-                    <h1 class="tab-title">📚 Tính giá trị trung bình</h1>
+                    <h1 class="tab-title">🧮 Tính tổng 2 ký số</h1>
                     <div class="debai">
                         <p>💡<b>Đề bài:</b>
                             <br>
