--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="container py-5">
         <div class="row mx-auto row">
-            <ul class="nav nav-tabs flex-column col-2" id="myTab" role="tablist">
+            <ul class="nav nav-tabs flex-md-column flex-row col-md-2 col-12" id="myTab" role="tablist">
                 <li class="nav-item">
                     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#bai1" role="tab"
                         aria-controls="bai1" aria-selected="true">Bài 1</a>
@@ -42,7 +42,7 @@
                         aria-selected="false">Bài 5</a>
                 </li>
             </ul>
-            <div class="tab-content col-10" id="myTabContent">
+            <div class="tab-content col-md-10 col-12" id="myTabContent">
                 <!-- Bài 1 -->
                 <div class="tab-pane fade show active" id="bai1" role="tabpanel" aria-labelledby="home-tab">
                     <h1 class="tab-title">💰 Tính tiền lương nhân viên</h1>
